--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    android:background="#f7f7f7"
+    android:background="#ececec"
     tools:showIn="@layout/fragment_news_item">
 
     <View
@@ -36,8 +36,8 @@
             android:layout_height="56dp"
             android:inputType="textCapSentences"
             android:paddingEnd="@dimen/margin_15"
+            android:background="@null"
             android:paddingStart="@dimen/margin_15"
-            android:background="@android:color/transparent"
             android:layout_weight="1"
             android:hint="@string/comment_hint"
             android:textColor="@color/black"
