--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -12,10 +12,11 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#3c000000"/>
+        android:layout_height="2dp"
+        android:background="#08000000"/>
 
     <LinearLayout
+        android:id="@+id/fieldContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -73,5 +74,11 @@
         android:visibility="gone"
         app:indicatorColor="@color/colorPrimary"
         app:indicatorName="LineSpinFadeLoaderIndicator"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/fieldContainer"
+        android:layout_height="1dp"
+        android:background="#05000000"/>
 
 </RelativeLayout>
