--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -112,14 +112,15 @@
                 android:textStyle="bold"
                 android:visibility="gone" />
 
-            <RelativeLayout
-                android:id="@+id/left_notification_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true" />
-
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/left_notification_container"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
 
         <View
             android:id="@+id/shadow"
