--- a/SportsSideKick/app/src/main/res/layout/notification_row.xml
+++ b/SportsSideKick/app/src/main/res/layout/notification_row.xml
@@ -3,15 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_alignParentStart="true"
     android:layout_marginTop="24dp"
-    android:layout_alignParentTop="true"
     android:background="@drawable/notification_background">
 
     <ImageView
         android:id="@+id/notification_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/ic_notification" />
 
