--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:layout_width="@dimen/wall_image_size"
+            android:layout_height="@dimen/wall_image_size"
             android:scaleType="centerCrop"
             tools:src="@drawable/news_holder_image" />
 
