--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -45,8 +45,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="@dimen/height_145"
-        android:layout_height="@dimen/height_145"
+        android:layout_width="@dimen/wall_image_size"
+        android:layout_height="@dimen/wall_image_size"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
