--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -229,4 +229,5 @@
     <dimen name="width_30">30dp</dimen>
     <dimen name="list_item_text_size">16sp</dimen>
     <dimen name="wall_image_size">130dp</dimen>
+    <dimen name="navigation_bar_margin_bottom">0dp</dimen>
 </resources>
