--- a/SportsSideKick/app/src/main/res/values-v21/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-v21/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="navigation_bar_margin_bottom">48dp</dimen>
+    <dimen name="wall_top_spacer_height">75dp</dimen>
 </resources>
