--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -39,7 +39,7 @@
                     android:layout_alignBottom="@id/topImage"
                     android:layout_alignTop="@id/topImage"
                     android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="@dimen/header_image_title_margin_top"
                     android:gravity="center"
                     android:shadowColor="@color/black_transparent_154"
                     android:shadowDx="1"
