--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -326,7 +326,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom"
-        android:layout_margin="@dimen/margin_16"
+        android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/fab_plus"
         android:tint="@color/white"
         app:backgroundTint="@color/black" />
