--- a/SportsSideKick/app/src/main/res/values-v21/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-v21/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="navigation_bar_margin_bottom">48dp</dimen>
     <dimen name="wall_top_spacer_height">75dp</dimen>
     <dimen name="header_image_title_margin_top">25dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
