--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -232,4 +232,5 @@
     <dimen name="navigation_bar_margin_bottom">0dp</dimen>
     <dimen name="wall_top_spacer_height">80dp</dimen>
     <dimen name="header_image_title_margin_top">120dp</dimen>
+    <dimen name="fab_margin">0dp</dimen>
 </resources>
