Revert "Merge branch 'temp-next-release-2'"
This reverts commit 78559d91b19b1381a19624f840c6d5b58ef4fc14, reversing
changes made to 95e1c37ad1d01de391544c7809b89e7c5e4790d5.

--- a/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
+++ b/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
@@ -5,7 +5,7 @@
     <item android:id="@android:id/background">
         <shape>
             <solid
-                android:color="#b3000000"
+                android:color="@color/colorPrimary"
                 />
         </shape>
     </item>
