--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/container"
     xmlns:tools="http://schemas.android.com/tools"
     android:clickable="true">
 
@@ -58,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/margin_20"
-                android:background="?selectableItemBackgroundBorderless"
+                android:background="@null"
                 android:scaleType="centerInside"
                 android:src="?popupCancelButtonIcon"
                 android:visibility="visible" />
@@ -75,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/margin_20"
-                android:background="?selectableItemBackgroundBorderless"
+                android:background="@null"
                 android:scaleType="centerInside"
                 android:src="?popupConfirmationButtonIcon" />
         </LinearLayout>
