--- a/SportsSideKick/app/src/main/res/layout/notification_row.xml
+++ b/SportsSideKick/app/src/main/res/layout/notification_row.xml
@@ -2,15 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="24dp"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
     android:background="@drawable/notification_background">
 
     <ImageView
         android:id="@+id/notification_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/ic_notification" />
 
@@ -25,7 +24,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_15"
-            tools:text="New chat message"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_10"
             android:ellipsize="end"
@@ -38,7 +36,6 @@
             android:id="@+id/notification_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Your received a test message"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginEnd="@dimen/margin_15"
             android:layout_marginStart="@dimen/margin_10"
