--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -40,7 +40,7 @@
         android:scrollHorizontally="true"
         tools:text="@string/lorem_ipsum"
         android:textColor="?black"
-        android:textSize="@dimen/list_item_text_size" />
+        android:textSize="@dimen/font_size_16" />
 
     <RelativeLayout
         android:id="@+id/likes_and_comments"
