--- a/SportsSideKick/app/src/main/res/layout/wall_item_shop.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_shop.xml
@@ -44,7 +44,7 @@
         android:scrollHorizontally="true"
         tools:text="@string/lorem_ipsum"
         android:textColor="?black"
-        android:textSize="@dimen/list_item_text_size" />
+        android:textSize="@dimen/font_size_16" />
 
 
     <de.hdodenhof.circleimageview.CircleImageView
