--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
@@ -207,7 +207,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/text2"
+                android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text1"
@@ -224,7 +224,7 @@
                 style="?videoChatButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/text2"
+                android:layout_below="@id/description"
                 android:layout_centerHorizontal="true"
                 android:text="@string/call_start"
                 android:textColor="@color/white" />
