--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -437,7 +437,7 @@
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/text2"
+                android:layout_above="@+id/description"
                 android:layout_centerHorizontal="true"
                 android:text="@string/chat_with_friends_login"
                 android:textAlignment="center"
@@ -445,7 +445,7 @@
                 android:textSize="@dimen/font_size_20" />
 
             <TextView
-                android:id="@+id/text2"
+                android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/center_below"
@@ -474,7 +474,7 @@
                 android:id="@+id/login_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/text2"
+                android:layout_below="@id/description"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_30"
                 android:orientation="vertical"
