--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -117,10 +117,10 @@
         <RelativeLayout
             android:id="@+id/left_notification_container"
             android:layout_width="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="24dp" />
 
         <View
             android:id="@+id/shadow"
