--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -282,13 +282,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
+                        android:layout_toLeftOf="@id/location_value"
                         android:layout_below="@+id/contact_info_caption"
                         android:layout_marginStart="@dimen/margin_20"
                         android:ellipsize="end"
                         android:paddingRight="16dp"
                         android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12"
-                        tools:text="user@test.com" />
+                        tools:text="test@test.com" />
 
                     <TextView
                         android:id="@+id/contact_info_phone"
@@ -336,6 +337,7 @@
                         android:id="@+id/location_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@id/subscribed_since_value"
                         android:layout_alignStart="@+id/location_caption"
                         android:layout_below="@+id/location_caption"
                         android:layout_centerHorizontal="true"
